--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,14 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-3">
             <div class="col">
                 <div id="tables"></div>
+            </div>
+            <div class="col">
+                <div class="movimientos">
+
+                </div>
             </div>
         </div>
     </div>
